[tool.poetry]
name = "bms"
version = "0.1.0"
description = ""
authors = ["elferia <a.t.qu.qu.qu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.6"
click = "^7.0"
requests = "^2.22.0"
beautifulsoup4 = "^4.8.2"
prompt_toolkit = "^3.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
autopep8 = "^1.5"
rope = "^0.16.0"

[tool.poetry.scripts]
bms = 'bms.bms:bms'
[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

